# python-numba_quaternion

./: .buildinfo  .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  index.html  makefile  objects.inv  output.json  output.txt  pyproject.toml  searchindex.js  setup.cfg
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/api/: modules.doctree  numba_quaternion.doctree
.doctrees/reference/: index.doctree  numba_quaternion.doctree
.github/workflows/: sphinx.yml  tox.yml
_modules/: index.html
_modules/numba_quaternion/: index.html
_sources/: installation.rst.txt  usage.rst.txt
_sources/api/: modules.rst.txt  numba_quaternion.rst.txt
_sources/reference/: numba_quaternion.rst.txt
api/modules/: index.html
api/numba_quaternion/: index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: README.md  badges.csv  conf.py  requirements.txt
docs/reference/: index.rst  numba_quaternion.rst
genindex/: index.html
installation/: index.html
py-modindex/: index.html
readme/: index.html
reference/: index.html
reference/numba_quaternion/: index.html
search/: index.html
src/numba_quaternion/: __init__.py
tests/: test_numba_quaternion.py
usage/: index.html
